# hrics

./: .gitignore  README.md
bioik/: BioHumanIk.py  compute_ik.py  marker_utils.py  octave-core  test_ik.py
bioik/matlab/: RERC1A4_1.trc  RERC1A4_3.trc  Upper_extremity_kinematics_for_Dmitry.m  mag3.m  normalize.m  outputik  outputik.csv  pose.ik  rtocarda.m  run_one_ik.m  run_upper_extremity_kinematics.m  tcp_server.m
bioik/trajik/: bio_read_traj.py
examples/: bio_read_traj.py  build_library.py  class_runSensors.py  compoundMotions.py  draw_mocap.py  example0.py  extractImages.py  fix_marker_id.py  get_marker_names.py  graph.py  hiddenSkeletonTracker.py  libraryViewer.py  library_viewer.py  listFiles.py  marker_statistics.py  play.py  resample.py  runKinectUpdate.py  runSensors.py  segment_file.py  statistics.py  table_marker_pub.py  test_runSensors.py  vicon_viewer.py  worldToPelvis.py
openni_tracker/: .hgtags  CMakeCache.txt  CMakeLists.txt  Readme  cmake_install.cmake
openni_tracker/msg/: confidence.msg  confidence_array.msg
openni_tracker/src/: openni_tracker.cpp  openni_tracker.old.cpp
openni_tracker_multi/: CMakeLists.txt  manifest.xml
openni_tracker_multi/launch/: .dual_kinect.launch.swp  dual_kinect.launch
openni_tracker_multi/src/: openni_tracker.cpp.bkp  openni_tracker1.cpp  openni_tracker2.cpp
or-hrics/: hrics-main.cpp  hrics-openrave.files
orcommon/include/: orcommon.hpp
orhrics/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hrics-main.hpp
orkinect/: CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  README.txt  mainpage.dox  manifest.xml  orkinect.files
orkinect/src/: cameraListener.cpp  cameraListener.hpp  classifyMotion.cpp  kinect-main.cpp  kinect-main.hpp  playMotion.cpp  playMotion.hpp  recordMotion.cpp  recordMotion.hpp  skeletonDrawing.cpp  skeletonDrawing.hpp  skeletonListener.cpp  skeletonListener.hpp
orkinect/src/features/: orFeatures.cpp  orFeatures.hpp  positionFeature.cpp  positionFeature.hpp
ormodels/: env.xml  experiment_table.xml  human_bio_two_arms.xml  human_wpi.xml  human_wpi_bio.xml  human_wpi_blue.xml  human_wpi_new.xml  human_wpi_test.xml  humans_aterm_userexp_env.xml  humans_bio_env.xml  humans_env_two_arms.xml  mocap_area.xml  table.xml  test_robot.xml
orprediction/: CMakeLists.txt  README.md  manifest.xml
orprediction/src/: classifyMotion.cpp  classifyMotion.hpp  jointListener.cpp  jointListener.hpp  prediction-main.cpp  prediction-main.hpp  recordMotion.cpp  recordMotion.hpp
python_module/: CMakeLists.txt  README.txt  herakles_model.py  package.xml  setup.py
python_module/bioik/: BioHumanIk.py  GenerateIkFromMarkers.py  GenerateIkLibrary.py  GetPr2JointStateTraj.py  TestBioHumanIk.py  compute_ik_old.py  play_file.py  test_elbow_ik.py  test_ik.py  test_two_arms_ik.py
python_module/bioik/matlab/: RERC1A4_6_short.trc  Upper_extremity_kinematics_for_Dmitry.m  markers_tmp.csv  outputik.csv  readMarkerData.m  readTRCData.m  readViconData.m  run_one_ik.m  run_upper_extremity_kinematics.m
python_module/bioik/user_experiment_data/selection/: compute_dof_limts.py  demo_in_collision.txt  generate_all_blocks.sh  generate_gmm_data.py  generate_gmm_data_joint.py  generate_gmm_data_single.py  generate_sets.py  list_selected.py  readme.txt  removed_from_testing.txt  selected_motions.txt  test_numpy_array_indexing.py
python_module/bioik/user_human_robot_experiment/: generate_splits.py  list_available_runs.py
python_module/biomech_ik/: bio_read_traj.py
python_module/gmm/: gmr_plot_calinon.py  gmr_plot_sin.py
python_module/gmm/data/: data2_a.csv  data2_b.csv
python_module/kinect/: build_library.py  class_runSensors.py  compoundMotions.py  extractImages.py  hiddenSkeletonTracker.py  library_viewer.py  prediction.py  rave.py  rave2.py  resample.py  runKinectUpdate.py  runSensors.py  segment_file.py  sortLibrary.py  statistics.py  test_runSensors.py
python_module/launch/: human_mocap_tracker.launch  human_pr2_experiment_data_viz.launch  human_robot_experiment_viz.launch  human_trajectory_publisher.launch
python_module/mocap/: MarkerMapper.py  MocapCommon.py  MocapDrawer.py  SegmentCSV.py  Segmenter.py  Segmenter_label.py  __init__.py  dirty_segment.py  draw_images.py  draw_mocap.py  draw_mocap_orkinect.py  fix_marker_id.py  get_marker_names.py  marker_statistics.py  plot_error.py  split_library.py  vicon_viewer.py
python_module/motion_analysis/: calc_features.py
python_module/readme/: ATERM_EXP.txt  HUMAN_ROBOT_EXP.txt  NEW_HUMAN_ROBOT_EXP.txt  RIUKUN_EXP.txt
python_module/tools/: base_pointing_pub.py  fix_csv_delim.py  keystroke.py  move_images.py  worldToPelvis.py
